# qdata

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf  test_save.py
backend/: Dockerfile  alembic.ini  debug422.py  pyproject.toml  test_analyze_api.py  test_api_e2e.py  test_cartera.py  test_complex.py  test_conns.py  test_csv_analyze.py  test_final.py  test_full_api.py  test_looker.py  test_retry.py
backend/alembic/: env.py
backend/alembic/versions/: 2a9b8c7d6e5f_add_sources_table.py  7f632d1bd76e_add_custom_rule_groups_and_group_field.py  8f55dea7d76e_initial.py  a1b2c3d4e5f6_add_project_status_progress.py  b3c4d5e6f7a8_add_missing_source_columns.py  c9d8e7f6a5b4_add_sort_order_to_data_sources.py  d1b1dca7ca7f_add_analysis_groups_and_group_id.py  e5f6a7b8c9d0_add_group_permissions.py  f0e1d2c3b4a5_add_error_actions.py
backend/qdata/auth/: dependencies.py  jwt.py  permissions.py
backend/qdata/cli/: analyze_cmd.py  app.py  report_cmd.py  rules_cmd.py  scheduler_cmd.py  synthetic_cmd.py
backend/qdata/connectors/: base.py  csv_conn.py  excel_conn.py  informix.py  json_conn.py  mysql.py  oracle.py  parquet_conn.py  postgres.py  sqlite.py  sqlserver.py
backend/qdata/core/: config.py  cube.py  descriptions.py  engine.py  loader.py  profiler.py  reporter.py  score.py
backend/qdata/db/: models.py  session.py
backend/qdata/rules/: advanced_rules.py  base.py  business_rules.py  cardinality.py  correlations.py  (+13 more)
backend/scripts/: backfill_values.py
backend/tests/: test_connectors.py  test_rules.py
(+58 files in other folders)
